--- a/docs/charchemdoc.css
+++ b/docs/charchemdoc.css
@@ -191,3 +191,36 @@ a[target]::after {
     content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z'/%3E%3Cpath fill-rule='evenodd' d='M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z'/%3E%3C/svg%3E");
     margin-left: 0.25em;
 }
+
+.spiro-calc {
+    display: grid;
+    grid-template-areas:
+        "n a1"
+        "m a2";
+    column-gap: 2rem;
+    row-gap: 0.8rem;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+.spiro-calc > label:nth-child(1) {grid-area: n;}
+.spiro-calc > label:nth-child(2) {grid-area: m;}
+.spiro-calc > label:nth-child(3) {grid-area: a1;}
+.spiro-calc > label:nth-child(4) {grid-area: a2;}
+.spiro-calc > label {display: flex; gap: 0.5rem; justify-content: flex-end;}
+input.invalid {
+    background-color: #FCC;
+}
+
+.fraction {
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
+}
+.fraction > *:first-child {
+    border-bottom: currentColor thin solid; 
+    padding-bottom: 0.1rem; 
+    margin-bottom: 0.1rem;
+}
+.large-bracket {
+    font-size: 200%;
+}
